--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,26 @@
 name: devity_console
-description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
-
+publish_to: none
 environment:
   sdk: ^3.6.1
-
+description: A new Flutter project.
 dependencies:
   awesome_snackbar_content: ^0.1.4
   bloc: ^8.1.4
+  dio: ^5.7.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_launcher_icons: ^0.14.1
   flutter_localizations:
     sdk: flutter
-  flutter_secure_storage: ^9.2.2
-  go_router: ^14.2.7
-  intl: ^0.19.0
-  http: ^0.13.5
   flutter_markdown: ^0.7.3+1
-  dio: ^5.7.0
+  flutter_secure_storage: ^9.2.2
   freezed_annotation: ^2.4.4
+  go_router: ^14.2.7
+  http: ^0.13.5
+  intl: ^0.19.0
   json_annotation: ^4.9.0
-  flutter_launcher_icons: ^0.14.1
-
-
-
 dev_dependencies:
   bloc_test: ^9.1.7
   build_runner: ^2.4.12
@@ -34,11 +29,10 @@ dev_dependencies:
   freezed: ^2.5.7
   json_serializable: ^6.8.0
   mocktail: ^1.0.4
-
+  pubspec_dependency_sorter: ^1.0.5
 flutter:
   uses-material-design: true
   generate: true
-
   assets:
     - assets/
     - assets/images/
