--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,27 +6,27 @@ environment:
 description: A new Flutter project.
 dependencies:
   awesome_snackbar_content: ^0.1.4
-  bloc: ^8.1.4
+  bloc: ^9.0.0
   dio: ^5.7.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.1.0
   flutter_launcher_icons: ^0.14.1
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.7.3+1
   flutter_secure_storage: ^9.2.2
-  freezed_annotation: ^2.4.4
+  freezed_annotation: ^3.0.0
   go_router: ^14.2.7
-  http: ^0.13.5
+  http: ^1.3.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
 dev_dependencies:
-  bloc_test: ^9.1.7
+  bloc_test: ^10.0.0
   build_runner: ^2.4.12
   flutter_test:
     sdk: flutter
-  freezed: ^2.5.7
+  freezed: ^3.0.0-0.0.dev
   json_serializable: ^6.8.0
   mocktail: ^1.0.4
   pubspec_dependency_sorter: ^1.0.5
