--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,6 @@
 analyzer:
+  enable-experiment:
+    - macros
   language:
     strict-casts: true
     strict-inference: true
@@ -13,6 +15,7 @@ analyzer:
     unrelated_type_equality_checks: warning
     invalid_annotation_target: ignore
     mixin_of_non_class: error
+    redirect_to_non_class: error
 
 
   exclude:
@@ -115,7 +118,6 @@ linter:
     - one_member_abstracts
     - only_throw_errors
     - overridden_fields
-    - package_api_docs
     - package_names
     - parameter_assignments
     - prefer_adjacent_string_concatenation
