--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dev_dependencies:
   build_runner: ^2.4.12
   flutter_test:
     sdk: flutter
-  freezed: ^3.0.0-0.0.dev
+  freezed: ^3.0.3
   json_serializable: ^6.8.0
   mocktail: ^1.0.4
   pubspec_dependency_sorter: ^1.0.5
