--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   http: ^1.3.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  sizer: ^3.0.5
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
