--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,21 +16,21 @@ dependencies:
     sdk: flutter
   flutter_markdown: ^0.7.3+1
   flutter_secure_storage: ^9.2.2
-  freezed_annotation: ^3.0.0
   go_router: ^14.2.7
   http: ^1.3.0
   intl: ^0.19.0
-  json_annotation: ^4.9.0
   sizer: ^3.0.5
+  equatable: ^2.0.5
+  freezed_annotation: ^2.4.1
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
   flutter_test:
     sdk: flutter
-  freezed: ^3.0.3
-  json_serializable: ^6.8.0
   mocktail: ^1.0.4
   pubspec_dependency_sorter: ^1.0.5
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 flutter:
   uses-material-design: true
   generate: true
