--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,20 +7,19 @@ description: A new Flutter project.
 dependencies:
   awesome_snackbar_content: ^0.1.4
   bloc: ^9.0.0
-  dio: ^5.7.0
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_launcher_icons: ^0.14.1
   flutter_localizations:
     sdk: flutter
-  flutter_secure_storage: ^9.2.2
+  flutter_secure_storage: ^4.2.1
   go_router: ^14.2.7
   http: ^1.3.0
   intl: ^0.19.0
   sizer: ^3.0.5
   equatable: ^2.0.5
-  freezed_annotation: ^2.4.1
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
@@ -28,7 +27,6 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^1.0.4
   pubspec_dependency_sorter: ^1.0.5
-  freezed: ^2.4.7
   json_serializable: ^6.7.1
 flutter:
   uses-material-design: true
