--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   intl: ^0.19.0
   sizer: ^3.0.5
   equatable: ^2.0.5
+  shared_preferences: ^2.2.2
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
