--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   sizer: ^3.0.5
   equatable: ^2.0.5
   shared_preferences: ^2.2.2
+  connectivity_plus: ^5.0.2
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
@@ -29,6 +30,7 @@ dev_dependencies:
   mocktail: ^1.0.4
   pubspec_dependency_sorter: ^1.0.5
   json_serializable: ^6.7.1
+  flutter_lints: ^5.0.0
 flutter:
   uses-material-design: true
   generate: true
