--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
@@ -46,3 +47,8 @@ app.*.map.json
 
 # FVM Version Cache
 .fvm/
+
+# Environment files
+.env.development
+.env.production
+.env.staging
