--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,13 @@ description: A new Flutter project.
 dependencies:
   awesome_snackbar_content: ^0.1.4
   bloc: ^9.0.0
+  connectivity_plus: ^5.0.2
   dio: ^5.8.0+1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_dotenv: ^5.1.0
   flutter_launcher_icons: ^0.14.1
   flutter_localizations:
     sdk: flutter
@@ -18,19 +21,16 @@ dependencies:
   go_router: ^14.2.7
   http: ^1.3.0
   intl: ^0.19.0
-  sizer: ^3.0.5
-  equatable: ^2.0.5
   shared_preferences: ^2.2.2
-  connectivity_plus: ^5.0.2
+  sizer: ^3.0.5
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.4
   pubspec_dependency_sorter: ^1.0.5
-  json_serializable: ^6.7.1
-  flutter_lints: ^5.0.0
 flutter:
   uses-material-design: true
   generate: true
@@ -38,3 +38,6 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    - .env.development
+    - .env.staging
+    - .env.production
