--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   mockito: ^5.3.2
   mocktail: ^1.0.4
   pubspec_dependency_sorter: ^1.0.5
+  coverage: ^1.6.3
 flutter:
   uses-material-design: true
   generate: true
