--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.2
   sizer: ^3.0.5
+  url_strategy: ^0.3.0
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
