--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,10 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^4.2.1
   go_router: ^14.2.7
+  google_fonts: ^6.2.1
   http: ^1.3.0
   intl: ^0.19.0
+  json_theme: 7.0.0+3
   shared_preferences: ^2.2.2
   sizer: ^3.0.5
   url_strategy: ^0.3.0
