--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shared_preferences: ^2.2.2
   sizer: ^3.0.5
   url_strategy: ^0.3.0
+  uuid: ^4.3.3
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
