app_editor -> spec editor

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Development Environment Variables
-API_BASE_URL=https://api.dev.example.com
+API_BASE_URL=http://localhost:8001
 API_KEY=dev_api_key_123
 API_VERSION=v1
 ANALYTICS_ENDPOINT=https://analytics.dev.example.com/events
