--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,8 @@ environment:
   sdk: ^3.6.1
 description: A new Flutter project.
 dependencies:
+  devity_sdk:
+    path: ../devity_flutter_sdk
   awesome_snackbar_content: ^0.1.4
   bloc: ^9.0.0
   connectivity_plus: ^6.1.4
@@ -22,6 +24,7 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.2.1
   intl: ^0.19.0
+  multi_dropdown: ^3.0.1
   shared_preferences: ^2.2.2
   sizer: ^3.0.5
   url_strategy: ^0.3.0
