--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   sizer: ^3.0.5
   url_strategy: ^0.3.0
   uuid: ^4.4.0
+  device_preview_plus: ^2.2.6
+  dotted_border: ^2.1.0
 dev_dependencies:
   bloc_test: ^10.0.0
   build_runner: ^2.4.12
